chore: Update npm dependencies for API server

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@sequelize/sqlite3": "^7.0.0-alpha.41",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -20,7 +22,8 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
