--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+api/prisma/dev.db-journal
+api/prisma/migrations/migration_lock.toml
