--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server/server.js",
-    "dev": "nodemon ./src/server/server.js",
+    "dev": "npx prisma migrate dev --name initial && node ./src/server/server.js",
+    "start": " prisma migrate dev --create-only && npx prisma migrate deploy && npx prisma generate && node ./src/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.14.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   },
